[package]
name = "revivalmq"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3.3"
async-trait = "0.1"
log = "0.4.20"
axum = { version = "0.6.20", features = ["macros"] }
memmap2 = "0.9.0"
tempfile = "3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
